# fastapi_projeto

./: README.md  pyproject.toml
