[tool.poetry]
name = "fastapi-projeto"
version = "0.1.0"
description = ""
authors = ["Jornada de Dados <jornadadedados@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
